@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-13T01:44:50Z",
+  "timestamp" : "2025-07-14T01:41:15Z",
   "count_outdated" : 1880,
   "uniques_outdated" : 1119,
-  "count" : 1898,
-  "uniques" : 1137,
+  "count" : 1899,
+  "uniques" : 1138,
   "clones" : [
     {
       "timestamp": "2025-07-01T00:00:00Z",
@@ -103,6 +103,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-07-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
