@@ -1,5 +1,5 @@
 {
-  "count": 18,
+  "count": 19,
   "uniques": 11,
   "clones": [
     {
@@ -56,6 +56,11 @@
       "timestamp": "2025-07-12T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-07-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
